--- a/frontend/src/components/NotesList/NotesList.css
+++ b/frontend/src/components/NotesList/NotesList.css
@@ -40,7 +40,7 @@
 .note-card {
   width: 18rem;
   color: #142788 !important;
-  background-color: #fff8e1 !important;
+  background-color: #f6f3e9 !important;
   border-radius: 6px !important;
   border: 0.5px solid #142788 !important;
 }
