--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .custom-navbar {
-  background-color: #142788 !important;
+  background-color: #0a1969 !important;
 }
 
 .custom-navbar .navbar-nav .nav-link,
@@ -9,7 +9,7 @@
 }
 
 .custom-navbar .nav-dropdown .dropdown-menu {
-  background-color: #142788;
+  background-color: #0a1969 !important;
 }
 
 .custom-navbar .nav-dropdown .dropdown-item {
